--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -2,17 +2,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app.kubernetes.io/name: users-ms
-  name: users-ms
+    app: users-microservice
+  name: users-microservice
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: users-ms
+      app: users-microservice
   template:
     metadata:
       labels:
-        app: users-ms
+        app: users-microservice
     spec:
       containers:
         - name: users
