--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,8 +5,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: digilinq/platform/user-service
-    container_name: user-service
+    image: tech-innovative/users
+    container_name: users
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     networks:
       - digilinq-network
     environment:
