--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -23,9 +23,9 @@ spring:
     activate:
       on-profile: local
   datasource:
-    url: jdbc:postgresql://localhost:5432/tech-innovative
-    username: tech-innovative
-    password: tech-innovative
+    url: jdbc:postgresql://localhost:5432/infinite-tech?currentSchema=users
+    username: infinite-tech
+    password: NPXkk0xUTJCfnrAR
     driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: true
@@ -33,6 +33,7 @@ spring:
       ddl-auto: create-drop
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
 ---
 spring:
@@ -44,4 +45,12 @@ spring:
     username: ${POSTGRES_USERNAME}
     password: ${POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
 ---
