--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: users-microservice
+  name: users
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: users-ms
+      app.kubernetes.io/name: users
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: users-ms
-        app: users-ms
+        app.kubernetes.io/name: users
+        app: users
     spec:
       containers:
         - name: users
@@ -27,5 +27,3 @@ spec:
               name: service
             - containerPort: 8081
               name: management
-          resources: {}
-      restartPolicy: Always
