--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -1,10 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: users-ms
+  name: users
+  labels:
+    tier: backend
 spec:
+  type: ClusterIP
   selector:
-    app.kubernetes.io/name: users-ms
+    app.kubernetes.io/name: users
   ports:
     - name: service
       protocol: TCP
@@ -14,4 +17,3 @@ spec:
       port: 8081
       protocol: TCP
       targetPort: management
-  type: ClusterIP
