--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -34,6 +34,10 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka-discovery-service:8761/eureka/
 ---
 spring:
   config:
