--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -6,6 +6,7 @@ logging:
     com.zaxxer.hikari.HikariConfig: DEBUG
     com.zaxxer.hikari: TRACE
 
+
 management:
   server:
     port: 8081
@@ -16,6 +17,11 @@ management:
 springdoc:
   swagger-ui:
     path: "/swagger-ui.html"
+
+spring:
+  application:
+    name: users
+
 ---
 spring:
   config:
