--- a/.github/workflows/create-tag-on-master-branch.yaml
+++ b/.github/workflows/create-tag-on-master-branch.yaml
@@ -95,5 +95,6 @@ jobs:
           manifests: |
             manifests/deployment.yml
             manifests/service.yaml
+#            manifests/servicemonitor.yaml
           images: |
             ${{ needs.create-docker-image.outputs.docker-image }}
