--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -10,6 +10,9 @@ logging:
 management:
   server:
     port: 8081
+  endpoint:
+    metrics:
+      enabled: false
   endpoints:
     web:
       exposure:
