--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -10,13 +10,10 @@ logging:
 management:
   server:
     port: 8081
-  endpoint:
-    metrics:
-      enabled: false
   endpoints:
     web:
       exposure:
-        include: prometheus,health,info,metric
+        include: prometheus,health,info
 springdoc:
   swagger-ui:
     path: "/swagger-ui.html"
