--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -12,6 +12,7 @@ management:
     port: 8081
   metrics:
     enable:
+      all: false
       jvm: false
       hikaricp: false
       tomcat: false
