--- a/web/src/test/resources/application-test.yaml
+++ b/web/src/test/resources/application-test.yaml
@@ -18,3 +18,8 @@ logging:
     org.springframework.web: DEBUG
     org.hibernate.sql: INFO
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
+# Eureka
+eureka:
+  client:
+    enabled: false
