--- a/.github/workflows/push-to-feature-branch.yaml
+++ b/.github/workflows/push-to-feature-branch.yaml
@@ -12,3 +12,19 @@ jobs:
     with:
       runner: ubuntu-latest
       java-version: 17
+
+  maven-build:
+    name: Build with Maven
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn --batch-mode --update-snapshots verify -DskipTests
+
