--- a/.github/workflows/push-to-feature-branch.yaml
+++ b/.github/workflows/push-to-feature-branch.yaml
@@ -27,4 +27,6 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify -DskipTests
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
