--- a/web/src/test/resources/application-test.yaml
+++ b/web/src/test/resources/application-test.yaml
@@ -12,6 +12,13 @@ spring:
     properties:
       hibernate:
         format_sql: true
+# Server
+#server:
+#  port: 18080
+#  servlet:
+#    context-path: /api
+
+# logging
 logging:
   level:
     root: INFO
